<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="128dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/si_for10to99"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="179dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="@style/CircularDeterminateProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="32dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <TextView
                    android:id="@+id/textViAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/si_all" />

                <TextView
                    android:id="@+id/textViSol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/si_solution" />

                <TextView
                    android:id="@+id/textViAver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/si_average" />

                <TextView
                    android:id="@+id/textViMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/si_maxt" />

                <TextView
                    android:id="@+id/textViMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/si_mint" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>